--- a/app/src/main/res/xml/recipe_widget_provider_info.xml
+++ b/app/src/main/res/xml/recipe_widget_provider_info.xml
@@ -2,9 +2,10 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
                     android:initialKeyguardLayout="@layout/recipe_widget_item"
                     android:initialLayout="@layout/recipe_widget_item"
-                    android:minHeight="400dp"
-                    android:minWidth="300dp"
+                    android:minHeight="250dp"
+                    android:minWidth="180dp"
                     android:previewImage="@drawable/chef"
                     android:updatePeriodMillis="86400000"
-                    android:widgetCategory="home_screen">
+                    android:widgetCategory="home_screen"
+                    android:resizeMode="horizontal|vertical">
 </appwidget-provider>
