--- a/app/src/main/res/layout-land/fragment_recipe_step_detail.xml
+++ b/app/src/main/res/layout-land/fragment_recipe_step_detail.xml
@@ -19,5 +19,6 @@
     <com.google.android.exoplayer2.ui.SimpleExoPlayerView
         android:id="@+id/playerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:visibility="invisible"/>
 </FrameLayout>
